--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 absl-py==0.2.2
 alembic==0.9.9
+aniso8601==3.0.2
 asn1crypto==0.24.0
 astor==0.7.1
+astroid==2.0.4
+autopep8==1.3.5
 bleach==1.5.0
 cffi==1.11.5
 click==6.7
@@ -9,44 +12,68 @@ cmake==3.11.0
 cryptography==2.2.2
 Django==2.0.6
 dlib==19.13.1
+dnspython==1.15.0
 emoji==0.5.0
+eventlet==0.24.1
 face-recognition==1.2.2
 face-recognition-models==0.3.0
 Flask==1.0.2
 Flask-Cors==3.0.6
+Flask-GraphQL==2.0.0
+Flask-JWT-Extended==3.12.1
 Flask-Login==0.4.1
 Flask-Migrate==2.2.1
 Flask-Moment==0.6.0
+Flask-SocketIO==3.0.1
 Flask-SQLAlchemy==2.3.2
 gast==0.2.0
+graphene==2.1.3
+graphql-core==2.1
+graphql-relay==0.4.5
+graphql-server-core==1.1.1
+greenlet==0.4.14
 grpcio==1.13.0
 h5py==2.8.0
 html5lib==0.9999999
 idna==2.7
 image==1.5.24
+isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
 Keras==2.2.0
 Keras-Applications==1.0.2
 Keras-Preprocessing==1.0.1
+lazy-object-proxy==1.3.1
 Mako==1.0.7
 Markdown==2.6.11
 MarkupSafe==1.0
+mccabe==0.6.1
+monotonic==1.5
 numpy==1.14.5
 opencv-python==3.4.1.15
 Pillow==5.1.0
+promise==2.1
 protobuf==3.6.0
+pycodestyle==2.4.0
 pycparser==2.18
 PyJWT==1.6.4
+pylint==2.1.1
+pymongo==3.7.1
 python-dateutil==2.7.3
 python-dotenv==0.8.2
 python-editor==1.0.3
+python-engineio==2.2.0
+python-socketio==2.0.0
 pytz==2018.4
 PyYAML==3.13
+Rx==1.6.1
 scipy==1.1.0
 six==1.11.0
 SQLAlchemy==1.2.8
 tensorboard==1.8.0
 tensorflow==1.8.0
 termcolor==1.1.0
+typed-ast==1.1.0
+typing==3.6.4
 Werkzeug==0.14.1
+wrapt==1.10.11
