--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
-absl-py==0.2.2
-alembic==0.9.9
+absl-py==0.4.1
+alembic==1.0.0
 aniso8601==3.0.2
 asn1crypto==0.24.0
 astor==0.7.1
 astroid==2.0.4
-autopep8==1.3.5
-bleach==1.5.0
+autopep8==1.4
+bleach==2.1.4
 cffi==1.11.5
 click==6.7
-cmake==3.11.0
-cryptography==2.2.2
-Django==2.0.6
-dlib==19.13.1
+cmake==3.12.0
+cryptography==2.3.1
+Django==2.1.1
+dlib==19.15.0
 dnspython==1.15.0
 emoji==0.5.0
 eventlet==0.24.1
-face-recognition==1.2.2
+face-recognition==1.2.3
 face-recognition-models==0.3.0
 Flask==1.0.2
 Flask-Cors==3.0.6
@@ -32,17 +32,17 @@ graphql-core==2.1
 graphql-relay==0.4.5
 graphql-server-core==1.1.1
 greenlet==0.4.14
-grpcio==1.13.0
+grpcio==1.14.2
 h5py==2.8.0
-html5lib==0.9999999
+html5lib==1.0.1
 idna==2.7
 image==1.5.24
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
-Keras==2.2.0
-Keras-Applications==1.0.2
-Keras-Preprocessing==1.0.1
+Keras==2.2.2
+Keras-Applications==1.0.4
+Keras-Preprocessing==1.0.3
 lazy-object-proxy==1.3.1
 Mako==1.0.7
 Markdown==2.6.11
@@ -50,30 +50,31 @@ MarkupSafe==1.0
 mccabe==0.6.1
 monotonic==1.5
 numpy==1.14.5
-opencv-python==3.4.1.15
-Pillow==5.1.0
+opencv-python==3.4.2.17
+Pillow==5.2.0
 promise==2.1
-protobuf==3.6.0
+protobuf==3.6.1
 pycodestyle==2.4.0
 pycparser==2.18
 PyJWT==1.6.4
 pylint==2.1.1
 pymongo==3.7.1
 python-dateutil==2.7.3
-python-dotenv==0.8.2
+python-dotenv==0.9.1
 python-editor==1.0.3
 python-engineio==2.2.0
 python-socketio==2.0.0
-pytz==2018.4
+pytz==2018.5
 PyYAML==3.13
 Rx==1.6.1
 scipy==1.1.0
 six==1.11.0
-SQLAlchemy==1.2.8
-tensorboard==1.8.0
-tensorflow==1.8.0
+SQLAlchemy==1.2.11
+tensorboard==1.10.0
+tensorflow==1.10.1
 termcolor==1.1.0
 typed-ast==1.1.0
-typing==3.6.4
+typing==3.6.6
+webencodings==0.5.1
 Werkzeug==0.14.1
 wrapt==1.10.11
