--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,7 @@ pycparser==2.18
 PyJWT==1.6.4
 pylint==2.1.1
 pymongo==3.7.1
+pyOpenSSL==18.0.0
 python-dateutil==2.7.3
 python-dotenv==0.9.1
 python-editor==1.0.3
