--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,10 @@ astor==0.7.1
 astroid==2.0.4
 autopep8==1.4
 bleach==2.1.4
+cachetools==3.0.0
+certifi==2018.10.15
 cffi==1.11.5
+chardet==3.0.4
 click==6.7
 cmake==3.12.0
 cryptography==2.3.1
@@ -27,6 +30,11 @@ Flask-Moment==0.6.0
 Flask-SocketIO==3.0.1
 Flask-SQLAlchemy==2.3.2
 gast==0.2.0
+gevent==1.3.7
+google-api-python-client==1.7.4
+google-auth==1.6.1
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.2.0
 graphene==2.1.3
 graphql-core==2.1
 graphql-relay==0.4.5
@@ -35,6 +43,7 @@ greenlet==0.4.14
 grpcio==1.14.2
 h5py==2.8.0
 html5lib==1.0.1
+httplib2==0.12.0
 idna==2.7
 image==1.5.24
 isort==4.3.4
@@ -50,10 +59,14 @@ MarkupSafe==1.0
 mccabe==0.6.1
 monotonic==1.5
 numpy==1.14.5
+oauth2client==4.1.3
+oauthlib==2.1.0
 opencv-python==3.4.2.17
 Pillow==5.2.0
 promise==2.1
 protobuf==3.6.1
+pyasn1==0.4.4
+pyasn1-modules==0.2.2
 pycodestyle==2.4.0
 pycparser==2.18
 PyJWT==1.6.4
@@ -67,6 +80,9 @@ python-engineio==2.2.0
 python-socketio==2.0.0
 pytz==2018.5
 PyYAML==3.13
+requests==2.20.1
+requests-oauthlib==1.0.0
+rsa==4.0
 Rx==1.6.1
 scipy==1.1.0
 six==1.11.0
@@ -76,6 +92,8 @@ tensorflow==1.10.1
 termcolor==1.1.0
 typed-ast==1.1.0
 typing==3.6.6
+uritemplate==3.0.0
+urllib3==1.24.1
 webencodings==0.5.1
 Werkzeug==0.14.1
 wrapt==1.10.11
